fix: Update layout so cleared & synced icons do not overlap (#3575)
Fixes: #3500

The extension originally added a `.tk-nav-account-icons-right-space`
style dynamically at runtime to each individual `.nav-account-row`
element. It appears the tooltip code for the synced transactions icon
will rewrite the `nav-account-row` removing the applied style

We therefore move the extra space CSS class to the parent
`.nav-accounts` element. This achieves two purposes:
 - The synced transactions tooltip does not remove the style class when
   rewriting the `nav-account-row` element
 - The account list balances remain aligned regardless of the presence
   of the uncleared status icon

--- a/src/extension/features/general/uncleared-account-highlight/index.css
+++ b/src/extension/features/general/uncleared-account-highlight/index.css
@@ -2,11 +2,11 @@
   font-size: 0.8rem;
 }
 
-.tk-nav-account-icons-right-space .nav-account-icons-right svg {
+.nav-accounts .nav-account-icons-right svg {
   position: static !important;
 }
 
-.tk-nav-account-icons-right-space .nav-account-icons-right {
+.nav-accounts .nav-account-icons-right {
   display: flex;
   align-items: center;
   width: 2rem;
